--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.299.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "streamdown": "^1.6.9",
