--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "streamdown": "^1.6.9",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
